<resources>
    <string name="app_name">IAMU</string>
    <string name="no_internet">No internet connection...</string>
    <string name="please_insert_value">Please insert value</string>
    <string name="fetching_data">Fetching data...</string>
    <string name="share">Share</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="https" translatable="false">https://</string>
    <string name="http" translatable="false">http://</string>
    <string name="phone_number" translatable="false">tel:0988766543</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="delete_collection">Delete collection</string>
    <string name="png" translatable="false">.png</string>
    <string name="confirm_delete_collection">Are you sure you want to delete collection?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Channel</string>
    <string name="collection_deleted">Collection deleted!</string>
    <string name="jpg" translatable="false">.jpg</string>
    <string name="collection_pictures_required">Both pictures need to be inserted</string>
    <string name="nft_image_required">NFT image needs to be inserted</string>
    <string name="btc_atm_ilica" translatable="false">Bitcoin ATM Ilica</string>
    <string name="btc_atm_rudeska" translatable="false">Bitcoin ATM Rudeška</string>
    <string name="btc_atm_branimirova" translatable="false">Bitcoin ATM Branimirova</string>
    <string name="confirm_delete_nft">Are you sure you want to delete this NFT?</string>
    <string name="delete_nft">Delete NFT</string>
    <string name="nft_deleted">NFT deleted!</string>
    <string name="dark_theme">Dark theme</string>
    <string name="theme">Theme</string>
    <string name="application_language">Application language</string>
    <string name="language">Language</string>
    <string name="collections">Collections</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="crypto_atms">Crypto Atms</string>
    <string name="collections_upper">COLLECTIONS</string>
    <string name="preferences_upper">PREFERENCES</string>
    <string name="crypto_atms_upper">CRYPTO ATMs</string>
    <string name="about_upper">ABOUT</string>
    <string name="sample_nft_item" translatable="false">Galaxy Fighter #13</string>
    <string name="check_on_opensea">Check on OpenSea</string>
    <string name="collection_upper">COLLECTION</string>
    <string name="sample_collection_name" translatable="false">Galaxy Fight Club</string>
    <string name="description_upper">DESCRIPTION</string>
    <string name="tv_font_list_nfts" translatable="false">sans-serif-black</string>
    <string name="tv_font_list_col" translatable="false">sans-serif-black</string>
    <string name="created_by">CREATED BY</string>
    <string name="author" translatable="false">Filip Ivanović</string>
    <string name="contact">Contact</string>
    <string name="iamu" translatable="false">IAMU</string>
    <string name="retry">Retry</string>
    <string name="nfts">NFTs</string>
    <string name="manage">Manage</string>
    <string name="nft_name">NFT Name</string>
    <string name="link">Link</string>
    <string name="font_tv_act_edit_nft" translatable="false">sans-serif-light</string>
    <string name="btn_font_act_edit_nft" translatable="false">sans-serif-light</string>
    <string name="commit">Commit</string>
    <string name="name">Name</string>
    <string name="collection_name">Collection name…</string>
    <string name="tv_font_act_edit_col" translatable="false">sans-serif-light</string>
    <string name="sample_collection_url" translatable="false">https://opensea.io/collection/deadfellaz</string>
    <string name="description">Description</string>
    <string name="information_about_collection">Information about collection</string>
    <string name="btn_font_act_edit_col" translatable="false">sans-serif-light</string>

    <!--<string name="title_activity_nft_items">NftItems</string>-->
    <!-- <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>-->
    <!--<string name="next">Next</string>
    <string name="previous">Previous</string>-->
    <!--<string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>