<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant"
    android:orientation="vertical"
    android:padding="@dimen/padding_frag_about"
    android:theme="@style/StartScreenTheme"
    tools:context=".AboutFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_upper" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/iv_height__frag_about"
        android:layout_marginTop="@dimen/iv_margin_top_frag_about"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/tv_margin_top_frag_about"
        android:text="@string/created_by" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/author"
        android:textSize="@dimen/tv_text_size_frag_about"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContactMe"
        android:layout_width="@dimen/btn_width_frag_about"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btn_margin_top_frag_about"
        android:paddingTop="0dp"
        android:text="@string/contact"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_text_size_frag_about"
        app:backgroundTint="?colorOnSecondary"
        app:cornerRadius="@dimen/btn_corner_radius_frag_about"
        app:strokeColor="?colorOnPrimary"
        app:strokeWidth="@dimen/btn_stroke_width_frag_about"
        tools:visibility="visible" />


</LinearLayout>