<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant"
    tools:context=".NftItemPagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_pager">

        <TextView
            android:id="@+id/tvNftItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sample_nft_item"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/tv_text_size_pager" />


        <ImageView
            android:id="@+id/ivNftItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/iv_width_pager"
            android:layout_marginTop="@dimen/iv_margin_top_pager"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            tools:src="@drawable/gfc_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckItemOnOpensea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btn_margin_top_pager"
            android:fontFamily="sans-serif-light"
            android:paddingTop="0dp"
            android:text="@string/check_on_opensea"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_text_size_pager"
            app:backgroundTint="?colorOnSecondary"
            app:cornerRadius="@dimen/btn_corner_radius_pager"
            app:strokeColor="?colorOnPrimary"
            app:strokeWidth="@dimen/btn_stroke_pager"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margin_top_pager"
            android:fontFamily="sans-serif-light"
            android:text="@string/collection_upper"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/tv_text_size_pager" />

        <TextView
            android:id="@+id/tvCollectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/tv_text_size_pager_small"
            android:textStyle="bold"
            tools:text="@string/sample_collection_name" />

        <ImageView
            android:id="@+id/ivNftCollection"
            android:layout_width="@dimen/iv_size_pager"
            android:layout_height="@dimen/iv_size_pager"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/iv_margin_top_pager_small"
            android:background="@drawable/border"
            tools:src="@drawable/gfc_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin_top_pager"
            android:fontFamily="sans-serif-light"
            android:text="@string/description_upper"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/tv_text_size_pager" />

        <TextView
            android:id="@+id/tvCollectionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_text_size_pager_small"
            android:layout_marginTop="@dimen/tv_margin_top_pager_small"
            android:justificationMode="inter_word"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckCollectionOnOpensea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btn_margin_top_pager"
            android:fontFamily="sans-serif-light"
            android:paddingTop="0dp"
            android:text="@string/check_on_opensea"
            android:textAllCaps="false"
            android:textSize="@dimen/tv_text_size_pager_small"
            app:backgroundTint="?colorOnSecondary"
            app:cornerRadius="@dimen/btn_corner_radius_pager"
            app:strokeColor="?colorOnPrimary"
            app:strokeWidth="@dimen/btn_stroke_pager"
            tools:visibility="visible" />

    </LinearLayout>

</ScrollView>